# FractalForge

./: CMakeLists.txt  CMakeLists.txt.user.acf617e  CustomButton.qml  CustomScrollBar.qml  Main.qml  ScrollElementsBar.qml  appPrototype_qml_module_dir_map.qrc  buttoncontroller.cpp  buttoncontroller.h  fractaltype.cpp  fractaltype.h  fractalwindow.cpp  fractalwindow.h  fractalwindowrenderer.cpp  fractalwindowrenderer.h  main.cpp  qmldir
